exports[`Grid renders correctly given a set of tiles 1`] = `
<div
  className="jQCioR">
  <div
    className="tiles">
    <div
      className="imABQe tile-invisible"
      onClick={[Function]}>
      <span
        className="tile-number">
        4
      </span>
    </div>
    <div
      className="dAYZtT tile-invisible"
      onClick={[Function]}>
      <span
        className="tile-number">
        2
      </span>
    </div>
    <div
      className="gCumpU tile-invisible"
      onClick={[Function]}>
      <span
        className="tile-number">
        3
      </span>
    </div>
    <div
      className="iFttuS tile-invisible"
      onClick={[Function]}>
      <span
        className="tile-number">
        1
      </span>
    </div>
  </div>
</div>
`;

exports[`Grid renders correctly given an empty set of tiles 1`] = `
<div
  className="lesbon">
  <div
    className="tiles" />
</div>
`;

exports[`Grid renders correctly given one tile 1`] = `
<div
  className="jQCioR">
  <div
    className="tiles">
    <div
      className="kaVAwu tile-invisible"
      onClick={[Function]}>
      <span
        className="tile-number">
        0
      </span>
    </div>
  </div>
</div>
`;
